demo/lab-docker-k8s/03-k8s-apps/ttyd/deployment-svc-ingress.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: ttyd-deployment
  namespace: devoxx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        guilde: console
        faction: tty
    spec:
      containers:
        - name: ttyd-container
          image: tsl0922/ttyd:latest
          imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: ttyd-service
  namespace: devoxx
  labels:
    guilde: console
spec:
  type: ClusterIP
  ports:
    - port: 7681
      name: ttyd-ws
  selector:
    guilde: console
    faction: tty

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ttyd-ingress
  namespace: devoxx
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: lab.nicolas.containous.cloud
    http:
      paths:
      - path: /ttyd
        backend:
          serviceName: ttyd-service
